updated the echo commands with proper tracing starters.

--- a/pipelines/incubator/build-deploy-task.yaml
+++ b/pipelines/incubator/build-deploy-task.yaml
@@ -1,4 +1,13 @@
 #Kabanero! on activate substitute StackId for text 'StackId'
+#
+# This task will build an appsody project specificed in the git-source using `appsody build` 
+# and push the generated application image to the specified image registry. The image can be optionally
+# signed before it's pushed to the registry.
+# Further this task also deploy the application image into the cluster as a separate pod.
+#
+# Insecure registy access or secure connection to the image registry can be setup by configuring the 
+# OpenShift cluster resource.  For more information, refer to https://kabanero.io/guides/working-with-pipelines/#transport-layer-security-tls-verification-for-image-registry-access-in-pipelines
+#
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
@@ -20,6 +29,7 @@ spec:
     default: docker.io
   steps:
   - name: build
+    # This steps builds the source project using appsody build.
     securityContext:
       privileged: true
     image: kabanero/kabanero-utils:0.9.0
@@ -27,31 +37,24 @@ spec:
     args:
       - -c
       - |
-        #executing the insecure_registry_setup.sh script if exists, to add internal registry to insecure registry list
-        echo "Running the script /scripts/insecure_registry_setup.sh ...."
-        /scripts/insecure_registry_setup.sh
+        # Configure image registry access in the container by adding it to the insecure registry list or enabling TLS verification
+        # by adding it to the trust store based on OpenShift cluster resource configuration.
+        echo "[INFO] Running the script /scripts/application_image_registry_access_setup.sh ...."
+        /scripts/application_image_registry_access_setup.sh
         retVal=$?
         if [ $retVal -ne 0 ]
         then
-           echo "The script failed(/scripts/insecure_registry_setup.sh)" >&2
+           echo "[ERROR] The script failed(/scripts/application_image_registry_access_setup.sh)" >&2
            exit $retVal
         fi
 
-        #executing the ca_certs_setup.sh script if exists, to add additional trusted ca certs to /etc/docker/certs.d/<hosname>/ca.crt
-        echo "Running the script /scripts/ca_certs_setup.sh ...."
-        /scripts/ca_certs_setup.sh
-        retVal=$?
-        if [ $retVal -ne 0 ]
-        then
-           echo "The script failed(/scripts/ca_certs_setup.sh)" >&2
-           exit $retVal
-        fi
-
+        # Docker does not support upper case characters in the image name.  Github does not have this restriction.
+        # So lowercase the image name if it has any upper case characters.
         OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$( /scripts/imageurl_imagename_lowercase.sh -u $(inputs.resources.docker-image.url) -n $(inputs.params.docker-imagename) -t $(inputs.params.docker-imagetag) )
         retVal=$?
         if [ $retVal -ne 0 ]
         then
-           echo "The script failed(/scripts/imageurl_imagename_lowercase.sh) Reason: $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" >&2
+           echo "[ERROR] The script failed(/scripts/imageurl_imagename_lowercase.sh) Reason: $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" >&2
            exit $retVal
         fi
         
@@ -59,17 +62,17 @@ spec:
         retVal=$?
         if [ $retVal -ne 0 ]
         then
-           echo "The script failed(/scripts/stack_registry_url_setup.sh) Reason: $OUTPUTS_STACK_IMAGE_REGISTRY_URL" >&2
+           echo "[ERROR] The script failed(/scripts/stack_registry_url_setup.sh) Reason: $OUTPUTS_STACK_IMAGE_REGISTRY_URL" >&2
            exit $retVal
         fi
 
-        echo "OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
-        echo "OUTPUTS_STACK_IMAGE_REGISTRY_URL that will be used to pull the stack =$OUTPUTS_STACK_IMAGE_REGISTRY_URL"
+        echo "[INFO] Stack registry URL = $OUTPUTS_STACK_IMAGE_REGISTRY_URL"
+        echo "[INFO] Application image URL = $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
 
         cd /workspace/$gitsource
         appsody build -t "$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" --buildah --buildah-options "--format=docker" --stack-registry "$OUTPUTS_STACK_IMAGE_REGISTRY_URL"
         if [ $? != 0 ]; then
-            echo "Appsody build failed.  Please review the appsody build logs above.  Pipeline run aborted."
+            echo "[ERROR] Appsody build failed.  Please review the appsody build logs above.  Pipeline run aborted."
             exit 1
         fi
     env:
@@ -79,6 +82,7 @@ spec:
     - mountPath: /var/lib/containers
       name: varlibcontainers
   - name: push
+    # Push the image built in the build step to the specified image registry.  Optionally sign the image.
     securityContext:
       privileged: true
     image: kabanero/kabanero-utils:0.9.0
@@ -86,46 +90,39 @@ spec:
     args:
       - -c
       - |
-
+        # Docker does not support upper case characters in the image name.  Github does not have this restriction.
+        # So lowercase the image name if it has any upper case characters.
         OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$( /scripts/imageurl_imagename_lowercase.sh -u $(inputs.resources.docker-image.url) -n $(inputs.params.docker-imagename) -t $(inputs.params.docker-imagetag) )
         retVal=$?
         if [ $retVal -ne 0 ]
         then
-           echo "The script failed(/scripts/imageurl_imagename_lowercase.sh) Reason: $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" >&2
+           echo "[ERROR] The script failed(/scripts/imageurl_imagename_lowercase.sh) Reason: $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" >&2
            exit $retVal
         fi
-        echo "OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
+        echo "[INFO] Application image URL = $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
 
-        #executing the insecure_registry_setup.sh script if exists, to add internal registry to insecure registry list
-        echo "Running the script /scripts/insecure_registry_setup.sh ...."
-        /scripts/insecure_registry_setup.sh
+        # Configure image registry access in the container by adding it to the insecure registry list or enabling TLS verification
+        # by adding it to the trust store based on OpenShift cluster resource configuration.
+        echo "[INFO] Running the script /scripts/application_image_registry_access_setup.sh ...."
+        /scripts/application_image_registry_access_setup.sh
         retVal=$?
         if [ $retVal -ne 0 ]
         then
-           echo "The script failed(/scripts/insecure_registry_setup.sh)" >&2
+           echo "[ERROR] The script failed(/scripts/application_image_registry_access_setup.sh)" >&2
            exit $retVal
         fi
 
-        #executing the ca_certs_setup.sh script if exists, to add additional trusted ca certs to /etc/docker/certs.d/<hosname>/ca.crt
-        echo "Running the script /scripts/ca_certs_setup.sh ...."
-        /scripts/ca_certs_setup.sh
-        retVal=$?
-        if [ $retVal -ne 0 ]
-        then
-           echo "The script failed(/scripts/ca_certs_setup.sh)" >&2
-           exit $retVal
-        fi
 
         #if /image-signing-config/registry does not exist, a container image signature is not generated.
         REPO=`cat /image-signing-config/registry`
         if [[ -z $REPO ]]
         then
-           echo "Signature will not be generated."
+           echo "[INFO] Signature will not be generated."
            buildah push "$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" "docker://$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
         else
-           echo "Signature will be generated."
+           echo "[INFO] Signature will be generated."
            if [[ $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE != $REPO/* ]]; then
-              echo "The specified signed image repository does not match the name of the repository in image-signing-config secret resource. The repository name should start with $REPO, Specified signed image name is $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
+              echo "[ERROR] The specified signed image repository does not match the name of the repository in image-signing-config secret resource. The repository name should start with $REPO, Specified signed image name is $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
               exit 1
            fi
            #importing RSA secret key, then extract an e-mail address from it.
@@ -134,15 +131,15 @@ spec:
            skopeo copy --remove-signatures --sign-by $SIGNBY "containers-storage:$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" "docker://$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
            RESULT=$?
            if [ $RESULT -ne 0 ]; then
-              echo "sign-image failed. exit code : $RESULT"
+              echo "[ERROR] sign-image failed. exit code : $RESULT"
               exit $RESULT
            fi
            if [[ -z `cat /image-signing-config/sigstore` ]]; then
-              echo "Signature is stored in the image registry"
+              echo "[INFO] Signature is stored in the image registry"
            else
               #invoking scripts for processing a generated signature.
-              echo "A signature is stored by scripts."
-              for f in /sigstore-script/*; do [ -f "$f" ] || break; echo "Processing $f"; $f;  done
+              echo "[INFO] A signature is stored by scripts."
+              for f in /sigstore-script/*; do [ -f "$f" ] || break; echo "[INFO] Processing $f"; $f;  done
            fi
         fi
     env:
@@ -171,10 +168,6 @@ spec:
   volumes:
   - name: varlibcontainers
     emptyDir: {}
-  - name: config-volume
-    configMap:
-      name: stack-image-registry-map
-      optional: true
   - name: registries-d
     configMap:
       name: registries-d
@@ -183,10 +176,6 @@ spec:
     configMap:
       name: sigstore-script
       defaultMode: 0555
-      optional: true
-  - name: secret-volume
-    secret:
-      secretName: default-stack-image-registry-secret
       optional: true
   - name: image-signing-config
     secret:
