--- a/pipelines/incubator/build-push-task.yaml
+++ b/pipelines/incubator/build-push-task.yaml
@@ -60,12 +60,12 @@ spec:
       - |
         # Configure image registry access in the container by adding it to the insecure registry list or enabling TLS verification
         # by adding it to the trust store based on OpenShift cluster resource configuration.
-        echo "Running the script /scripts/application_image_registry_access_setup.sh ...."
+        echo "[INFO] Running the script /scripts/application_image_registry_access_setup.sh ...."
         /scripts/application_image_registry_access_setup.sh
         retVal=$?
         if [ $retVal -ne 0 ]
         then
-           echo "The script failed(/scripts/application_image_registry_access_setup.sh)" >&2
+           echo "[ERROR] The script failed(/scripts/application_image_registry_access_setup.sh)" >&2
            exit $retVal
         fi
 
