--- a/pipelines/incubator/image-scan-task.yaml
+++ b/pipelines/incubator/image-scan-task.yaml
@@ -45,6 +45,8 @@ spec:
       args:
         - -c
         - |
+          # Docker does not support upper case characters in the image name.  Github does not have this restriction.
+          # So lowercase the image name if it has any upper case characters.
           INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$( /scripts/imageurl_imagename_lowercase.sh -u $(inputs.resources.docker-image.url) -n $(inputs.params.docker-imagename) -t $(inputs.params.docker-imagetag) )
           retVal=$?
           if [ $retVal -ne 0 ]
@@ -54,23 +56,14 @@ spec:
           fi
           echo "INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
  
-          #executing the insecure_registry_setup.sh script if exists, to add internal registry to insecure registry list
-          echo "Running the script /scripts/insecure_registry_setup.sh ...."
-          /scripts/insecure_registry_setup.sh
+          # Configure image registry access in the container by adding it to the insecure registry list or enabling TLS verification
+          # by adding it to the trust store based on OpenShift cluster resource configuration.
+          echo "[INFO] Running the script /scripts/application_image_registry_access_setup.sh ...."
+          /scripts/application_image_registry_access_setup.sh
           retVal=$?
           if [ $retVal -ne 0 ]
           then
-             echo "The script failed(/scripts/insecure_registry_setup.sh)" >&2
-             exit $retVal
-          fi
-
-          #executing the ca_certs_setup.sh script if exists, to add additional trusted ca certs to /etc/docker/certs.d/<hosname>/ca.crt
-          echo "Running the script /scripts/ca_certs_setup.sh ...."
-          /scripts/ca_certs_setup.sh
-          retVal=$?
-          if [ $retVal -ne 0 ]
-          then
-             echo "The script failed(/scripts/ca_certs_setup.sh)" >&2
+             echo "[ERROR] The script failed(/scripts/application_image_registry_access_setup.sh)" >&2
              exit $retVal
           fi
         
